--- a/Clarinet.toml
+++ b/Clarinet.toml
@@ -1,15 +1,21 @@
 [project]
-name = "blank-project"
-description = "Create a project from scratch: Start from a blank scaffold for your next Clarity contract"
+name = 'blank-project'
+description = 'Create a project from scratch: Start from a blank scaffold for your next Clarity contract'
 authors = []
 telemetry = true
-cache_dir = "./.cache"
+cache_dir = '.\.cache'
+requirements = []
+[contracts.extension-trait]
+path = 'contracts/extension-trait.clar'
+clarity_version = 3
+epoch = 3.0
 
-# [contracts.CHANGE-THIS-TO-YOUR-CONTRACT-NAME]
-# path = "contracts/CHANGE-THIS-TO-YOUR-CONTRACT-NAME.clar"
-
+[contracts.proposal-trait]
+path = 'contracts/proposal-trait.clar'
+clarity_version = 3
+epoch = 3.0
 [repl.analysis]
-passes = ["check_checker"]
+passes = ['check_checker']
 
 [repl.analysis.check_checker]
 strict = false
